<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playing_group"
    android:layout_width="match_parent"
    android:layout_height="73dp"
    android:clipToOutline="true"
    android:layout_gravity="bottom"
    android:background="#ffffff"
    tools:targetApi="s">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:progress="50"
            android:layout_marginTop="-10.5dp"
            android:layout_marginStart="-16dp"
            android:layout_marginEnd="-16dp"
            android:layout_gravity="top"
            style="@style/seek_bar"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Song name -->
            <TextView
                android:id="@+id/song_name"
                android:layout_width="94dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-6dp"
                android:text="@string/song_name"
                android:textAppearance="@style/song_name"
                android:gravity="top"
                />

            <!-- Singer name -->
            <TextView
                android:id="@+id/singer_name"
                android:layout_width="83dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="13dp"
                android:text="@string/singer_name"
                android:textAppearance="@style/singer_name"
                android:gravity="top"
                />

            <!-- Play button-->
            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-0dp"
                android:background="@drawable/play_arrow"
                android:contentDescription="@string/btn" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>