<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    app:layout_behavior=""
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="10dp">

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_main_test"
            android:contentDescription="@string/btn">

        </ImageView>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/iphone_11_p"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clipToOutline="true"
            android:background="@drawable/iphone_11_p"
            tools:targetApi="s">

        <!-- Search line-->

            <RelativeLayout
                android:id="@+id/rectangle_search"
                android:layout_width="295dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="33dp"
                android:layout_centerInParent="true"
                android:background="@drawable/search">

                <TextView
                    android:id="@+id/search"
                    android:layout_width="50dp"
                    android:layout_height="21dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="40dp"
                    android:layout_centerInParent="true"
                    android:text="@string/search"
                    android:textAppearance="@style/search"
                    />

                <View
                    android:id="@+id/magnifier"
                    android:layout_width="16.41dp"
                    android:layout_height="23.33dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="9.98dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/magnifier"
                    />
            </RelativeLayout>

            <!--Location lines-->

            <RelativeLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="94dp"
                >

                <ImageButton
                    android:id="@+id/line_location_1"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/line_location_active"
                    android:contentDescription="@string/btn"
                    />

                <ImageButton
                    android:id="@+id/line_location_2"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/line_location_inactive"
                    android:contentDescription="@string/btn"
                    />

                <ImageButton
                    android:id="@+id/line_location_3"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/line_location_inactive"
                    android:contentDescription="@string/btn"
                    />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/image_main_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="194dp"
                android:background="@drawable/image_main"
                android:contentDescription="@string/btn" />

         <!--My playlists-->
            <TextView
                android:id="@+id/my_playlist"
                android:layout_width="130dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="122dp"
                android:layout_marginTop="604dp"
                android:gravity="top"
                android:text="@string/my_playlist"
                android:textAppearance="@style/my_playlist" />

            <!-- Rectangle Create new -->
            <ImageButton
                android:id="@+id/rectangle_playlist_new"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="673dp"
                android:background="@drawable/rectangle_playlist"
                android:elevation="4dp"
                android:contentDescription="@string/btn" />

            <View
                android:id="@+id/line_8"
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="45dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="728dp"
                android:background="@drawable/playlist_cnp_horiz"
                />

            <!-- Line 7 -->
            <View
                android:id="@+id/line_7"
                android:layout_width="3dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="75dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="698dp"
                android:background="@drawable/playlist_cnp_vert"
                />



            <!-- Create new playlist -->
            <TextView
                android:id="@+id/create_new"
                android:layout_width="147dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="137dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="673dp"
                android:text="@string/create_new_"
                android:textAppearance="@style/create_new_"
                android:gravity="top"
                />

            <!-- Rectangle 1 -->
            <View
                android:id="@+id/rectangle_playlist_1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="806dp"
                android:background="@drawable/rectangle_playlist"
                android:elevation="4dp"
                />

            <!-- Last changes: 2/9/22 -->
            <TextView
                android:id="@+id/last_change"
                android:layout_width="114dp"
                android:layout_height="17dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="137dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="823dp"
                android:text="@string/last_change"
                android:textAppearance="@style/last_change"
                android:gravity="top"
                />

            <!-- Playlist name -->
            <TextView
                android:id="@+id/playlist_name_1"
                android:layout_width="104dp"
                android:layout_height="19dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="137dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="806dp"
                android:text="@string/playlist_na"
                android:textAppearance="@style/playlist_name"
                android:gravity="top"
                />

            <!-- Vector 2 -->
            <View
                android:id="@+id/vector_2"
                android:layout_width="12.44dp"
                android:layout_height="12.34dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="245dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="811dp"
                android:background="@drawable/pen"
                />

            <!-- image 3 -->
            <View
                android:id="@+id/image_trash"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="137dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="896dp"
                android:background="@drawable/image_trash"
                />


            <!-- drawable/image_3.xml -->



        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


        <!--Playing-->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/playing_group"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:clipToOutline="true"
        android:layout_gravity="bottom"
        android:background="#ffffff"
        tools:targetApi="s"
        android:visibility="invisible"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>