<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    app:layout_behavior=""
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/iphone_11_p"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clipToOutline="true"
            android:background="@drawable/iphone_11_p"
            tools:targetApi="s">

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff000000"
                android:contentDescription="@string/btn"/>

            <!-- Search line-->

             <RelativeLayout
                android:id="@+id/rectangle_search"
                android:layout_width="295dp"
                android:layout_height="32dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="33dp"
                android:layout_centerInParent="true"
                android:background="@drawable/search">

                <TextView
                    android:id="@+id/search"
                    android:layout_width="50dp"
                    android:layout_height="21dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="40dp"
                    android:layout_centerInParent="true"
                    android:text="@string/search"
                    android:textAppearance="@style/search"
                    />

                <View
                    android:id="@+id/magnifier"
                    android:layout_width="16.41dp"
                    android:layout_height="23.33dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="9.98dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/magnifier"
                    />
            </RelativeLayout>

            <!--Location lines-->

            <RelativeLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="94dp"
                >

                <ImageButton
                    android:id="@+id/line_location_1"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/line_location_inactive"
                    android:contentDescription="@string/btn"
                    />

                <ImageButton
                    android:id="@+id/line_location_2"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/line_location_active"
                    android:contentDescription="@string/btn"
                    />

                <ImageButton
                    android:id="@+id/line_location_3"
                    android:layout_width="20dp"
                    android:layout_height="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/line_location_inactive"
                    android:contentDescription="@string/btn"
                    />
            </RelativeLayout>

            <!-- IMG: There is nothing to listen -->
            <View
                android:id="@+id/there_is_no_img"
                android:layout_width="88.13dp"
                android:layout_height="74.44dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="345dp"
                android:layout_centerInParent="true"
                android:background="@drawable/nothing_to_listen"
                android:visibility="gone"
                />

            <!-- TEXT: There is nothing to listen -->
            <TextView
                android:id="@+id/there_is_no_text"
                android:layout_width="171dp"
                android:layout_height="21dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="435dp"
                android:text="@string/there_is_nothing_to_l"
                android:textAppearance="@style/search"
                android:visibility="gone"
                />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="123dp"
            >
        </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/playing_group"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:clipToOutline="true"
        android:layout_gravity="bottom"
        android:background="#ffffff"
        tools:targetApi="s"
        android:visibility="invisible"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>